little refacto to improve java